@@ -1,3 +1,6 @@
+28
+Default project files are now with OpenCV 3.2.0.
+
 27
 Improved compatibility of RemoteWebcamMultiSrv with OpenCV 4.1.0.
 
